tests/baselines/reference/genericCloduleInModule2.errors.txt
tests/cases/compiler/genericCloduleInModule2.ts(14,8): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericCloduleInModule2.ts (1 errors) ====
    module A {
        export class B<T> {
            foo() { }
            static bar() { }
        }
    }
    
    module A {
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B;
           ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    b.foo();